# parsing_film

./: .gitignore  Cargo.toml  docker-compose.yaml
src/: main.rs  parser.rs  second_main.rs  status.rs  utils.rs
src/database/: films.rs  mod.rs
