[package]
name = "parsing_film"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.18.1"
serde_json = "1.0.108"
html5ever = "0.26.0"
csv = "1.3.0"
